Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjTextRetBoolObj.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, Boolean> yoda
        Boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
