Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjTextRettextFail.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
